@@ -2,6 +2,8 @@
 
 	* src/lib/gtkui/chessview.py: Handle gtk.gtkgl.widget_get_gl_drawable() returning
 	  None (bugs #488902 and #512068).
+        * src/lib/ai.py: Made AI monitor process more resiliant to OSError exceptions (bug
+          #517347).
 
 2008-02-19  Robert Ancell  <robert.ancell@gmail.com>
 
